@@ -1,5 +1,6 @@
 Version 2.00.23 - 
 ====================================
+  New commands 'segtypes' and 'formats'.
   Suppress pvmove abort message in test mode.
   Improve pvcreate/remove device not found error message.
   Allow pvmove to move data within the same PV.
